--- a/pandoc/templates/ath-clean.css
+++ b/pandoc/templates/ath-clean.css
@@ -1,12 +1,11 @@
 /*
-Title: ATH Clean
-Author: Andrew Heiss @andrewheiss <www.andrewheiss.com>
-Description: Nice clean theme for Pandoc, based in part on "Pesto"
-    (https://github.com/ttscoff/MarkedCustomStyles/blob/master/Pesto.scss) by
-    Andrew Patton (@acusti <http://www.acusti.ca>)
+Title: ATH Clean revised
+Description: Nice clean theme for Pandoc by Andrew Heiss, based in part on "Pesto"
+(https://github.com/ttscoff/MarkedCustomStyles/blob/master/Pesto.scss) by
+Andrew Patton (@acusti <http://www.acusti.ca>)
 Non-standard fonts used: Work Sans, Gentium Basic
 ---
-*/
+  */
 @import url("https://fonts.googleapis.com/css?family=Work+Sans:300,400,700");
 @import url("https://fonts.googleapis.com/css?family=Gentium+Basic");
 *, *:before, *:after {
@@ -21,7 +20,7 @@ html, button, input, select, textarea {
 
 html, body, button, input, select, textarea {
   color: #0a0a0a;
-  font-family: "Gentium Basic", "Palatino", serif;
+    font-family: "Gentium Basic", "Palatino", serif;
 }
 
 body {
@@ -78,9 +77,9 @@ body {
 }
 
 /* Headings */
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Work Sans", "Roboto Condensed", sans-serif;
-}
+  h1, h2, h3, h4, h5, h6 {
+    font-family: "Work Sans", "Roboto Condensed", sans-serif;
+  }
 
 h1 {
   font-size: 2.8em;
@@ -130,29 +129,29 @@ h6 {
 }
 
 /* Links */
-a {
-  color: #c7402d;
-  text-decoration: none;
-}
+  a {
+    color: #5e81ac;
+      text-decoration: none;
+  }
 
 a:hover {
-  color: #eaaca3;
+  color: #d08770;
 }
 
 /* Monospaced stuff */
-code, pre, kbd, samp, tt {
-  font-family: "Consolas", "Monaco", "Lucida Console", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace;
-  background-color: #f2f2f2;
-  font-size: 80%;
-  padding: 0;
-}
+  code, pre, kbd, samp, tt {
+    font-family: "Consolas", "Monaco", "Lucida Console", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace;
+    background-color: #f2f2f2;
+      font-size: 80%;
+    padding: 0;
+  }
 
 pre {
   font-size: 1.3em;
   margin: 1em 0;
   line-height: 1.1;
   background-color: #f2f2f2;
-  overflow-x: auto;
+    overflow-x: auto;
   padding: 1.3rem;
   position: relative;
   white-space: pre;
@@ -165,7 +164,7 @@ code, tt {
   white-space: nowrap;
   border: 1px solid #e3e3e3;
   background-color: #f2f2f2;
-  color: #0a0a0a;
+    color: #0a0a0a;
 }
 
 pre > code {
@@ -177,10 +176,10 @@ pre > code {
 }
 
 /* General typography */
-p {
-  font-size: 1.3em;
-  margin: 1em 0;
-}
+  p {
+    font-size: 1.3em;
+    margin: 1em 0;
+  }
 
 b, strong {
   font-weight: bold;
@@ -229,10 +228,10 @@ hr {
 }
 
 /* Extra document parts */
-.article-meta {
-  font-family: "Work Sans", "Roboto Condensed", sans-serif;
-  font-weight: 300;
-}
+  .article-meta {
+    font-family: "Work Sans", "Roboto Condensed", sans-serif;
+    font-weight: 300;
+  }
 
 .title {
   font-size: 3.3em;
@@ -249,6 +248,10 @@ hr {
 
 .published {
   font-size: 1em;
+}
+
+.code-repo {
+  font-size: 0.7em;
 }
 
 .authors {
@@ -273,6 +276,14 @@ hr {
   padding: 5px;
 }
 
+.keywords {
+  font-family: "Work Sans", "Roboto Condensed", sans-serif;
+  font-weight: 300;
+  font-size: 1em;
+  margin: 1.5em 3em 0;
+  padding: 5px;
+}
+
 .acknowledgments {
   font-family: "Work Sans", "Roboto Condensed", sans-serif;
   font-weight: 300;
@@ -282,28 +293,40 @@ hr {
   background: #f2f2f2;
 }
 
+.keywords-title, .acknowledgments-title {
+  font-weight: 700;
+  font-style: italic;
+}
+
 .epigraph-wrapper {
   overflow: hidden;
 }
 
 .epigraph {
-  width: 65%;
+  width: 50%;
   float: right;
   color: #8a8a8a;
+    font-size: 0.9em;
 }
 
 .epigraph-text {
   padding-top: 0.8em;
   font-style: italic;
-  font-size: 1.6em;
 }
 
 .epigraph-source {
   text-align: right;
-  font-size: 1.2em;
 }
 
-.references p {
+p.epigraph-text {
+  margin-bottom: 0;
+}
+
+p.epigraph-source {
+  margin-top: 0;
+}
+
+.references .csl-entry {
   padding-left: 3rem;
   text-indent: -3rem;
   font-size: 1.1em;
@@ -312,26 +335,11 @@ hr {
   font-weight: 300;
 }
 
-/* Images */
-/* figure {
-    display: inline-block;
-    position: relative;
-    margin: 1em 0 2em;
+  figure {
+    display: table;
     text-align: center;
-}    
-
-img {
     margin: 0 auto;
-    border: 0 none;
-    display: block;
-    width: auto;
-    max-width: 100%;
-} */
-figure {
-  display: table;
-  text-align: center;
-  margin: 0 auto;
-}
+  }
 
 figure img {
   display: block;
@@ -348,18 +356,18 @@ p img {
 }
 
 /* Lists */
-ol > li:before {
-  color: #0a0a0a;
-  content: counter(ol, decimal) ".";
-  counter-increment: ol;
-  margin-right: 0.333em;
-  position: absolute;
-  right: 100%;
-}
+  ol > li:before {
+    color: #0a0a0a;
+      content: counter(ol, decimal) ".";
+    counter-increment: ol;
+    margin-right: 0.333em;
+    position: absolute;
+    right: 100%;
+  }
 
 ul > li:before {
   background-color: #0a0a0a;
-  border-radius: 50%;
+    border-radius: 50%;
   content: "";
   height: 0.3em;
   width: 0.3em;
@@ -421,9 +429,9 @@ dt {
 }
 
 /* Tables */
-tbody {
-  display: table-row-group;
-}
+  tbody {
+    display: table-row-group;
+  }
 
 tfoot {
   display: table-footer-group;
@@ -469,35 +477,36 @@ table ul, table ol {
 }
 
 /* Captions */
-caption, figcaption {
-  font-family: "Work Sans", "Roboto Condensed", sans-serif;
-  font-size: 1em;
-  text-align: left;
-  background: #f2f2f2;
-  padding: 4px 8px;
-  margin: 4px 0;
-}
+  caption, figcaption {
+    font-family: "Work Sans", "Roboto Condensed", sans-serif;
+    font-size: 1em;
+    text-align: left;
+    background: #f2f2f2;
+      padding: 4px 8px;
+    margin: 4px 0;
+  }
 
 figure > figcaption {
   margin-top: 0.25em;
 }
 
 /* Print */
-@media print {
-  html {
-    font-size: 130%;
+  @media print {
+    html {
+      font-size: 130%;
+    }
+    
+    body {
+      padding-left: 0;
+      padding-right: 0;
+      max-width: 100%;
+    }
+    
+    ul > li:before {
+      height: 0.325em;
+      width: 0.325em;
+    }
   }
-
-  body {
-    padding-left: 0;
-    padding-right: 0;
-    max-width: 100%;
-  }
-
-  ul > li:before {
-    height: 0.325em;
-    width: 0.325em;
-  }
-}
 
 /*# sourceMappingURL=ath-clean.css.map */
+  
